feat: add auth and user manage

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,16 @@
+DATABASE_SERVER=mysql
+DATABASE_TYPE=mysql
+DATABASE_NAME=db_name
+DATABASE_USER=db_user
+DATABASE_PASSWORD=db_password
+DATABASE_ROOT_PASSWORD=db_root_password
+DATABASE_PORT=3306
+
+EMAIL_HOST=smtp.mail.com
+EMAIL_USER=test@mail.com.br
+EMAIL_PASSWORD=mail_passwrod
+EMAIL_PORT=465
+
+SECRET=secret_here
+
 VIEWS_DIR=src/views
