--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,6 @@
     "PHP": "^8.2.0",
     "devvime/modpath": "^1.0",
     "vlucas/phpdotenv": "^5.6",
-    "phpmailer/phpmailer": "^6.10",
-    "firebase/php-jwt": "^6.11",
-    "robmorgan/phinx": "^0.16.10",
-    "catfan/medoo": "^2.2"
+    "robmorgan/phinx": "^0.16.10"
   }
 }
